--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
 theme: jekyll-theme-merlot
-Title: Anahita Taheri
-Description1: IT Woman
-Description2: trader
+Title: Sajedeh Samari
+Description1: Software Engineer
